--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Squadfree - v4.7.0
-  * Template URL: https://bootstrapmade.com/squadfree-free-bootstrap-template-creative/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * Template Name: StudentHub - v4.7.0
+  * Template URL: https://BAIG,NAIEEM AND AFFAN/StudentHub-free-bootstrap-template-creative/
+  * Author: BAIG,NAIEEM AND AFFAN
+  * License: https://BAIG,NAIEEM AND AFFAN/license/
   ======================================================== -->
 </head>
 
@@ -319,7 +319,7 @@
 
         <div class="section-title" data-aos="fade-in" data-aos-delay="100">
           <h2>Team</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Having mutual respect, common and aligned goals, open communication, and patience can all help make for a successful team. Teamwork only works when team members feel like they can speak openly, share ideas without getting shot down (and build on those of others), make suggestions, and voice their opinions. Our team shares our thoughts and ideas. Thus makes us a good team to solve the problem we chose.</p>
         </div>
 
         <div class="row">
@@ -328,7 +328,7 @@
             <div class="member" data-aos="fade-up">
               <div class="pic"><img src="assets/img/team/team-1.jpeg"class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Walter White</h4>
+                <h4>Mohammed Adnan Baig </h4>
                 <span>Chief Executive Officer</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
@@ -344,7 +344,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="150">
               <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
+                <h4>Naieem Ahmed</h4>
                 <span>Product Manager</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
@@ -360,7 +360,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>William Anderson</h4>
+                <h4>Ismail Affan</h4>
                 <span>CTO</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
@@ -383,7 +383,11 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Get assignment help from subject matter experts!
+            4.7/5 rating | 10,000+ happy students | Great tutors 24/7  Post your question using our quick and easy form
+            Review Offers
+            Accept An Offer
+            Done..</p>
         </div>
 
         <div class="row">
@@ -391,7 +395,8 @@
             <div class="info-box mb-4">
               <i class="bx bx-map"></i>
               <h3>Our Address</h3>
-              <p>A108 Adam Street, New York, NY 535022</p>
+              <p>Grand Southern Trunk Rd, Vandalur
+                TN 600048, INDIA</p>
             </div>
           </div>
 
@@ -399,7 +404,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-envelope"></i>
               <h3>Email Us</h3>
-              <p>contact@example.com</p>
+              <p>StudentHub.Educator@gmail.com</p>
             </div>
           </div>
 
@@ -407,7 +412,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-phone-call"></i>
               <h3>Call Us</h3>
-              <p>+1 5589 55488 55</p>
+              <p>+91 98554455 55</p>
             </div>
           </div>
 
@@ -459,13 +464,13 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>Squadfree</h3>
-              <p class="pb-3"><em>Qui repudiandae et eum dolores alias sed ea. Qui suscipit veniam excepturi quod.</em></p>
+              <h3>StudentHub</h3>
+              <p class="pb-3"><em>Yup! We've got an expert waiting to help you in every subject!.</em></p>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                Grand Southern Trunk Rd, Vandalur <br>
+                TN 600048, INDIA<br><br>
+                <strong>Phone:</strong> +91 98556655 55<br>
+                <strong>Email:</strong> StudentHub.Educator@gmail.com<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -501,7 +506,7 @@
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p>Get all the latest Offers. Sign up for newsletter today.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
@@ -514,14 +519,14 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Squadfree</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>StudentHub</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/squadfree-free-bootstrap-template-creative/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Licensing information: https://BAIG,NAIEEM AND AFFAN/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://BAIG,NAIEEM AND AFFAN/StudentHub-free-bootstrap-template-creative/ -->
+        Designed by <a href="https://BAIG,NAIEEM AND AFFAN/">BAIG,NAIEEM AND AFFAN</a>
       </div>
     </div>
   </footer><!-- End Footer -->
